--- a/TP4/Heladeria/FrmMenuPrincipal.resx
+++ b/TP4/Heladeria/FrmMenuPrincipal.resx
@@ -16366,7 +16366,7 @@
   <data name="btnVolverLogin.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAAaRJREFUaEPtmgFtwzAQRQuhEAZhEAphEAZhEAalEAZhEAZhEMYgu1fVlWOf0yZO
+        DAAACwwBP0AiyAAAAaRJREFUaEPtmgFtwzAQRQuhEAZhEAphEAZhEAalEAZhEAZhEMYgu1fVlWOf0yZO
         L2crX3qn6OTa/k1ydtIehmHoAjXZImqyRdRki4SDV+FL+DaC8UYTqSUc/AqW+hOOwmgyNRBOwhZi3GxC
         SyHsRiplZuRDWPM6TmVi5FPIGleSysTIqoNcSXVvjFlXA8GjEdYZSvR7lJuE4M0IZwITQQ8tngRPRjDx
         I8TC1F0zBE9G3gRNmHkR0vY3CJ6MAGVfE2eqWAAIVkboM2aqKp0FTUUzBDpNRS5rbEzJDLv0rD3BqxFI
@@ -16379,7 +16379,7 @@
   <data name="btnSalir.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAAcRJREFUaEPlmu1twzAMRDNKR+kIHaEjdYSO1BG6iasLQkNWzjbFDwlOCTwEvtAi
+        DAAACwwBP0AiyAAAAcRJREFUaEPlmu1twzAMRDNKR+kIHaEjdYSO1BG6iasLQkNWzjbFDwlOCTwEvtAi
         H4Lkj3NbluUloOEVaYOPwm8B9VN4L7Q9s8Bu2AmFV1yv77eNrD4Ldd8MsAOrVaZuFltWM2X2JFDY+d5X
         33BWM2SOJKTuvfVNR5+I1EgZjQT9RPa+I22NkNFIoNYfI+sBmTKmHeoDhJky5tmbi4oZMq6ZT0HFSBn3
         LBpWjJAJmUHDhkyZsLNpSMiQCT2ThjtEDg6VADQ8IGKBcAlAwxM8i6RIABoqsCyUJgFoqKRnsVQJQMMO
@@ -16410,7 +16410,7 @@
   <data name="btnVentas.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAAtVJREFUaEPdmI2t1DAQhF8JlEAJlEAJlEAJlEAJlEAJlEAJlEAJdHDsSGc0Ho/j
+        DAAACwwBP0AiyAAAAtVJREFUaEPdmI2t1DAQhF8JlEAJlEAJlEAJlEAJlEAJlEAJlEAJdHDsSGc0Ho/j
         nzi+iJE+6WXfJtnx/+Xt8XhcyYfgU/A1+BJ8DN4FLvcUNngSFIrCfwc1/Qxg0N0/hQ2eAMX9CXoFQ0t6
         yAYn+RzM6FfwPnDP7MYGJ6iZQItjmGFuoLe+Ba7HYOZUz9jgIGhNLQ7zA8W7fBQMQyrEXH4XNjjI94AF
         Ez2t63pxeojZ4AAoWIUl1+U6fgQsNIrLa2KDA2irjhaCHmChN11eExscQMf6zN6ABYE1NbxscAAtYmbl
@@ -16428,7 +16428,7 @@
   <data name="btnStock.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAA1FJREFUaEPtmI2N1DAQha8ESqAESqAESqAESqAESqAESqAESqCE62Dxt8pbvcw+
+        DAAACwwBP0AiyAAAA1FJREFUaEPtmI2N1DAQha8ESqAESqAESqAESqAESqAESqAESqCE62Dxt8pbvcw+
         x072hJTTjvRJ3GQ8P/Z4kuXlcrm8C6LyjETlGYnKMxKVZyQqd/Kh8aXxvfF50c2ALWu+Nj4uusNE5QCC
         EvxH40+jCs/SOgebKn8bPxvfGp8aaV2XqCzglMAEIdiMbCXCSczIa+NXg8KGJ52ULGIxTnC2JZwIJ0Nr
         sUbCulQMOvfJGtb2TrfK70ZsYQ+A0Ug8ce7GylmDU5Nwem7Dv70IbH2tbHTfZvO5FiUHvd3wHUiJJzhJ
@@ -16445,6 +16445,18 @@
         /r/qzYjKMxKVZyQqz0hUnpGoPB+Xl3+G8u44HqG4vwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="toolTip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>114, 17</value>
+  </metadata>
+  <metadata name="toolTip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>211, 17</value>
+  </metadata>
+  <metadata name="toolTip4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>308, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
